Fix including current bet in pot

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
           <div class="col-md-6">
             <form>
               <div class="form-group">
-                <label for="inputBetSize">Size of Bet</label>
+                <label for="inputBetSize">Bet Size</label>
                 <input type="number" v-model.number="bet" class="form-control" id="inputBetSize" placeholder="Size of Bet">
               </div>
               <div class="form-group">
-                <label for="inputPotSize">Current Size of Pot</label>
+                <label for="inputPotSize">Pot Size (Including current bet)</label>
                 <input type="number" v-model.number="pot" class="form-control" id="inputPotSize" placeholder="Size of Pot">
               </div>
               <div class="form-group">
